--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="assets/img/logo.png" alt="..." />Rebornian48</a>
+                <a class="navbar-brand" href="#page-top"><img src="assets/img/logo.png" alt="..." />VincentAndriK</a>
             </div>
         </nav>
         <!-- Team-->
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                  <p class="text-muted">Sebagai bagian dari persembahan 10 tahun perjalanan JKT48, situs web ini menjadi salah satu persembahan kecil yang bisa diberikan.</p>
+                  <p class="text-muted">Sebagai bagian dari persembahan 10 tahun perjalanan , situs web ini menjadi salah satu persembahan kecil yang bisa diberikan.</p>
                 </div>
                 <div class="text-center">
-                    <h2 class="section-heading">Statistik JKT48 - Unofficial (Coming Soon)</h2>
-                    <h3 class="section-subheading text-muted">Merupakan situs web yang digunakan untuk mengenal lebih dalam mengenai data member, kapten, dsb yang ada di JKT48 </h3>
+                    <h2 class="section-heading">Statistik  - Unofficial (Coming Soon)</h2>
+                    <h3 class="section-subheading text-muted">Merupakan situs web yang digunakan untuk mengenal lebih dalam mengenai data member, kapten, dsb yang ada di  </h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/one.png" alt="..." />
-                            <h4>Data Member JKT48</h4>
+                            <h4>Data Member </h4>
                             <p class="text-muted"></p>
                             <a class="btn btn-dark" href="#!" target="_blank">Open Link</a>
                         </div>
@@ -45,7 +45,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/one.png" alt="..." />
-                            <h4>Data Tim JKT48</h4>
+                            <h4>Data Tim </h4>
                             <p class="text-muted"></p>
                             <a class="btn btn-dark" href="#!" target="_blank">Open Link</a>
                         </div>
@@ -53,38 +53,35 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/one.png" alt="..." />
-                            <h4>Data Lagu di JKT48</h4>
+                            <h4>Data Lagu di </h4>
                             <p class="text-muted"></p>
                             <a class="btn btn-dark" href="#!" target="_blank">Open Link</a>
                         </div>
                     </div>
-                </div>
-                <div class="text-center">
-                    <h2 class="section-heading">Sorter JKT48</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/one.png" alt="..." />
-                            <h4>Sorter Member JKT48</h4>
-                            <p class="text-muted">Merupakan hasil pengembangan dari JKT48 Member Sorter sebelumnya yang telah dibuat oleh <a href="https://twitter.com/_futarisaison">@_futarisaison</a> yang merupakan bagian dari situs web yessicatamara.com yang kini telah inaktif. JKT48 Member Sorter digunakan untuk menentukan member yang paling disayang.</p>
-                            <a class="btn btn-dark" href="/jkt48sorter/" target="_blank">Open Link</a>
+                            <img class="mx-auto rounded-circle" src="assets/img/covid.png" alt="Covid" />
+                            <h4>Data Covid19</h4>
+                            <p class="text-muted">Merupakan data covid19</p>
+                            <a class="btn btn-dark" href="/covid19/" target="_blank">Open Link</a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/tyfm.png" alt="..." />
-                            <h4>Sorter Member JKT48 (Lite Version)</h4>
-                            <p class="text-muted">Merupakan hasil penyederhanaan dari JKT48 Member Sorter, sebagai bagian untuk mengenang member yang lulus dikarenakan terkena restrukturisasi, sekaligus sebagai bagian dari "Thank You For The Memories".</p>
-                            <a class="btn btn-dark" href="/jkt48sorterlite/" target="_blank">Open Link</a>
+                            <h4>Sorter Member  (Lite Version)</h4>
+                            <p class="text-muted">Merupakan hasil penyederhanaan dari  Member Sorter, sebagai bagian untuk mengenang member yang lulus dikarenakan terkena restrukturisasi, sekaligus sebagai bagian dari "Thank You For The Memories".</p>
+                            <a class="btn btn-dark" href="/sorterlite/" target="_blank">Open Link</a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/one.png" alt="..." />
-                            <h4>Sorter Lagu JKT48</h4>
-                            <p class="text-muted">Memberikan permainan menarik yang memberikan pilihan lagu yang ada di JKT48, baik yang dari Jepang maupun Single Original JKT48 dan JKT48 Akustik. Sebuah pengembangan dari JKT48 Sorter. </p>
-                            <a class="btn btn-dark" href="/jkt48songsorter/" target="_blank">Open Link</a>
+                            <h4>Sorter Lagu </h4>
+                            <p class="text-muted">Memberikan permainan menarik yang memberikan pilihan lagu yang ada di , baik yang dari Jepang maupun Single Original  dan  Akustik. Sebuah pengembangan dari  Sorter. </p>
+                            <a class="btn btn-dark" href="/songsorter/" target="_blank">Open Link</a>
                         </div>
                     </div>
                 </div>
@@ -92,7 +89,7 @@
         </section>
         <section class="page-section">
             <div class="container">
-                <h2>Pertanyaan Umum Seputar Rebornian48</h2>
+                <h2>Pertanyaan Umum Seputar Situs Web</h2>
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingOne">
@@ -124,23 +121,6 @@
                     <div class="accordion-body">Alasan admin menggunakan fasilitas github, selain hosting tidak membayar sepeserpun (sampai sekarang), kode yang diunggah di situs github dapat diambil seluruhnya dan dimodifikasi sebagian maupun seluruhnya.</div>
                   </div>
                 </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingFour">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-                        Mengapa data statistik yang ada di situs web ini di tulis Unofficial? 
-                      </button>
-                    </h2>
-                    <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Karena pada dasarnya sederhana saja, admin hanya merupakan fans JKT48, bukan bagian dari member atau pun staff JKT48. Hal itu lah yang membuat admin menuliskan Unofficial karena memang data yang ada di sini merupakan data tidak resmi, meskipun yang diambil dan diolah berasal dari situs web JKT48. Namun ada juga yang diambil dari Wikipedia baik yang bahasa Inggris dan bahasa Indonesia, serta beberapa situs pendukung lainnya.
-                          <ul>
-                              <li><a href="https://www.jkt48.com">Situs Web Official JKT48</a></li>
-                              <li><a href="https://id.wikipedia.org/wiki/JKT48">Wikipedia Bahasa Indonesia JKT48</a></li>
-                              <li><a href="https://en.wikipedia.org/wiki/JKT48">Wikipedia Bahasa Inggris JKT48</a></li>
-                              <li><a href="https://akb48.fandom.com/wiki/AKB48_Wiki">Situs Web AKB48 Fandom</a></li>
-                              <li><a href="http://stage48.net/wiki/index.php/Main_Page">Situs Web Wiki Stage 48</a></div></li>
-                          </ul>
-                    </div>
-                  </div>
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingFive">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
@@ -158,7 +138,7 @@
                       </button>
                     </h2>
                     <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Bisa langsung diambil di <a href="https://github.com/Rebornian48/rebornian48.github.io">Github Rebornian48.</a>
+                      <div class="accordion-body">Bisa langsung diambil di <a href="https://github.com/VincentAndriK/vincentandrik.github.io">Github Rebornian48.</a>
                     </div>
                   </div>
                   <div class="accordion-item">
@@ -168,17 +148,7 @@
                       </button>
                     </h2>
                     <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Silakan saja kontak melalui DM (Direct Message) Twitter di <a href="https://www.twitter.com/Rebornian48" target="_blank">@Rebornian48</a>
-                    </div>
-                  </div>
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingEight">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEight" aria-expanded="false" aria-controls="flush-collapseEight">
-                        Jika ingin memberikan dukungan finansial dapat membayar melalui platform apa saja?
-                      </button>
-                    </h2>
-                    <div id="flush-collapseEight" class="accordion-collapse collapse" aria-labelledby="flush-headingEight" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Sementara ini, dukungan finansial bisa dikirim melalui Saweria dengan username Rebornian48 atau <a href="https://saweria.co/Rebornian48" target="_blank">saweria.co/Rebornian48</a>
+                      <div class="accordion-body">Silakan saja kontak melalui DM (Direct Message) Twitter di <a href="https://www.twitter.com/VincentAndriK" target="_blank">@VincentAndriK</a>
                     </div>
                   </div>
               </div>
