--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                       </button>
                     </h2>
                     <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Bisa langsung diambil di <a href="https://github.com/VincentAndriK/vincentandrik.github.io">Github Rebornian48.</a>
+                      <div class="accordion-body">Bisa langsung diambil di <a href="https://github.com/VincentAndriK/vincentandrik.github.io">Github</a>
                     </div>
                   </div>
                   <div class="accordion-item">
@@ -159,17 +159,16 @@
             <div class="container">
                   <p>Social Media</p>
                   <p>
-                    <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/Rebornian48" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="https://github.com/Rebornian48" target="_blank"><i class="fab fa-github"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="http://t.me/rebornian48" target="_blank"><i class="fab fa-telegram-plane"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="https://discordapp.com/users/510068434260983808" target="_blank"><i class="fab fa-discord"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/VincentAndriK" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="https://github.com/VincentAndriK" target="_blank"><i class="fab fa-github"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="http://t.me/VincentAndriK" target="_blank"><i class="fab fa-telegram-plane"></i></a>
                   </p>
                   <p>
                     Made with &nbsp;<i class="fa fa-coffee"></i> Coffee and
                     <a href="https://www.ecma-international.org/publications-and-standards/standards/ecma-262/" target="_blank"> Javascript</a>
                   </p>
                   <p>
-                    Copyright &copy; Rebornian48 - 
+                    Copyright &copy; VincentAndriK - 
                     <script>
                         document.write(new Date().getFullYear());
                     </script>
