Update My Profile Page

--- a/me/index.html
+++ b/me/index.html
@@ -55,9 +55,6 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experiences</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
@@ -353,7 +350,7 @@
                 <br>
                 <i>Bahasa Pemrograman : Visual Basic</i>
                 <br>
-                <i>Tanggal Pembuatan : 13 April 2017</i>
+                <i>Pembaruan Terakhir : 13 April 2017</i>
                 <br>
                 <i>Tautan : <a href="https://github.com/VincentAndriK/Petung">Aplikasi Petung</a></i>
               </li>
@@ -365,7 +362,7 @@
                 <br>
                 <i>Bahasa Pemrograman : Visual Basic</i>
                 <br>
-                <i>Tanggal Pembuatan : 11 Mei 2017</i>
+                <i>Pembaruan Terakhir : 11 Mei 2017</i>
                 <br>
                 <i>Tautan : <a href="https://github.com/VincentAndriK/Geometri">Aplikasi Geometri</a></i>
               </li>
@@ -373,25 +370,59 @@
                 <i class="fa-li fas fa-award text-warning"></i>
                 <b>Aplikasi Restopedia (Tugas PLBTW)</b>
                 <br>
+                <br>
+                <i>Aplikasi ini merupakan hasil kolaborasi dengan Eric Simahan, Nirmala Agatha Santoso, Mikhael Diastama Santoso, Heryatmo Benediktus Sembiring, dan Sandi Prando Saragih</i>
+                <br>
+                <br>
                 <i>Aplikasi yang menerapkan konsep kolaborasi yaitu konsep dimana setiap pengunjung dapat melihat kontennya sendiri orang lain, serta mengirim dan menghapus konten yang dibuat sendiri.</i>
                 <br>
-                <i>Bahasa Pemrograman : PHP, Android Studio</i>
+                <i>Bahasa Pemrograman : PHP, Java</i>
                 <br>
-                <i>Tanggal Pembuatan : 11 Mei 2017</i>
+                <i>Pembaruan Terakhir : 5 Juni 2017</i>
                 <br>
                 <i>Tautan : <a href="https://github.com/diasantoso/plbtw-project">Aplikasi Restopedia (Tugas PLBTW)</a></i>
               </li>
               <li class="mb-3">
                 <i class="fa-li fas fa-award text-warning"></i>
-                <b>Aplikasi Restopedia (Tugas PLBTW)</b>
+                <b>Aplikasi Movie Catalog (Tugas PLBTW)</b>
                 <br>
-                <i>Aplikasi yang menerapkan konsep kolaborasi yaitu konsep dimana setiap pengunjung dapat melihat kontennya sendiri orang lain, serta mengirim dan menghapus konten yang dibuat sendiri.</i>
+                <i>Aplikasi yang mengambil konten data film dengan menerapkan format katalog (menggunakan API)</i>
                 <br>
-                <i>Bahasa Pemrograman : PHP, Android Studio</i>
+                <i>Bahasa Pemrograman : Java</i>
                 <br>
-                <i>Tanggal Pembuatan : 11 Mei 2017</i>
+                <i>Pembaruan Terakhir : 13 April 2017</i>
                 <br>
-                <i>Tautan : <a href="https://github.com/diasantoso/plbtw-project">Aplikasi Restopedia (Tugas PLBTW)</a></i>
+                <i>Tautan : <a href="https://github.com/VincentAndriK/PLBTWMovieCatalog">Aplikasi Movie Catalog (Tugas PLBTW)</a></i>
+              </li>
+              <li class="mb-3">
+                <i class="fa-li fas fa-award text-warning"></i>
+                <b>Aplikasi Grafika-Komputer</b>
+                <br>
+                <i>Bahasa Pemrograman : C++, C</i>
+                <br>
+                <i>Pembaruan Terakhir : 1 Juni 2017</i>
+                <br>
+                <i>Tautan : <a href="https://github.com/VincentAndriK/Grafika-Komputer">Aplikasi Grafika-Komputer</a></i>
+              </li>
+              <li class="mb-3">
+                <i class="fa-li fas fa-award text-warning"></i>
+                <b>Aplikasi Pengolahan Citra</b>
+                <br>
+                <i>Bahasa Pemrograman : Java</i>
+                <br>
+                <i>Pembaruan Terakhir : 16 Mei 2017</i>
+                <br>
+                <i>Tautan : <a href="https://github.com/VincentAndriK/Pengolahan-Citra">Aplikasi Pengolahan Citra</a></i>
+              </li>
+              <li class="mb-3">
+                <i class="fa-li fas fa-award text-warning"></i>
+                <b>Aplikasi Pemantauan Covid-19 di Indonesia</b>
+                <br>
+                <i>Bahasa Pemrograman : JavaScript</i>
+                <br>
+                <i>Pembaruan Terakhir : 17 Maret 2021</i>
+                <br>
+                <i>Tautan : <a href="https://vincentandrik.github.io/covid19/">Aplikasi Covid-19 Indonesia</a></i>
               </li>
             </ul>
           </div>
