rebornia48 project added

--- a/me/index.html
+++ b/me/index.html
@@ -65,6 +65,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#portofolio">Portofolio</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#sideproject">Side Project</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -343,6 +346,18 @@
             <ul class="fa-ul mb-0">
               <li class="mb-3">
                 <i class="fa-li fas fa-award text-warning"></i>
+                <b>Aplikasi Movie Catalog (Tugas PLBTW)</b>
+                <br>
+                <i>Aplikasi yang mengambil konten data film dengan menerapkan format katalog (menggunakan API)</i>
+                <br>
+                <i>Bahasa Pemrograman : Java</i>
+                <br>
+                <i>Pembaruan Terakhir : 13 April 2017</i>
+                <br>
+                <i>Tautan : <a href="https://github.com/VincentAndriK/PLBTWMovieCatalog">Aplikasi Movie Catalog (Tugas PLBTW)</a></i>
+              </li>
+              <li class="mb-3">
+                <i class="fa-li fas fa-award text-warning"></i>
                 <b>Aplikasi Petung</b>
                 <br>
                 <i>Aplikasi untuk menghitung peringatan orang meninggal dengan menggunakan perhitungan orang Jawa</i>
@@ -367,6 +382,26 @@
               </li>
               <li class="mb-3">
                 <i class="fa-li fas fa-award text-warning"></i>
+                <b>Aplikasi Pengolahan Citra</b>
+                <br>
+                <i>Bahasa Pemrograman : Java</i>
+                <br>
+                <i>Pembaruan Terakhir : 16 Mei 2017</i>
+                <br>
+                <i>Tautan : <a href="https://github.com/VincentAndriK/Pengolahan-Citra">Aplikasi Pengolahan Citra</a></i>
+              </li>
+              <li class="mb-3">
+                <i class="fa-li fas fa-award text-warning"></i>
+                <b>Aplikasi Grafika-Komputer</b>
+                <br>
+                <i>Bahasa Pemrograman : C++, C</i>
+                <br>
+                <i>Pembaruan Terakhir : 1 Juni 2017</i>
+                <br>
+                <i>Tautan : <a href="https://github.com/VincentAndriK/Grafika-Komputer">Aplikasi Grafika-Komputer</a></i>
+              </li>
+              <li class="mb-3">
+                <i class="fa-li fas fa-award text-warning"></i>
                 <b>Aplikasi Restopedia (Tugas PLBTW)</b>
                 <br>
                 <br>
@@ -383,45 +418,54 @@
               </li>
               <li class="mb-3">
                 <i class="fa-li fas fa-award text-warning"></i>
-                <b>Aplikasi Movie Catalog (Tugas PLBTW)</b>
-                <br>
-                <i>Aplikasi yang mengambil konten data film dengan menerapkan format katalog (menggunakan API)</i>
-                <br>
-                <i>Bahasa Pemrograman : Java</i>
-                <br>
-                <i>Pembaruan Terakhir : 13 April 2017</i>
-                <br>
-                <i>Tautan : <a href="https://github.com/VincentAndriK/PLBTWMovieCatalog">Aplikasi Movie Catalog (Tugas PLBTW)</a></i>
-              </li>
-              <li class="mb-3">
-                <i class="fa-li fas fa-award text-warning"></i>
-                <b>Aplikasi Grafika-Komputer</b>
-                <br>
-                <i>Bahasa Pemrograman : C++, C</i>
-                <br>
-                <i>Pembaruan Terakhir : 1 Juni 2017</i>
-                <br>
-                <i>Tautan : <a href="https://github.com/VincentAndriK/Grafika-Komputer">Aplikasi Grafika-Komputer</a></i>
-              </li>
-              <li class="mb-3">
-                <i class="fa-li fas fa-award text-warning"></i>
-                <b>Aplikasi Pengolahan Citra</b>
-                <br>
-                <i>Bahasa Pemrograman : Java</i>
-                <br>
-                <i>Pembaruan Terakhir : 16 Mei 2017</i>
-                <br>
-                <i>Tautan : <a href="https://github.com/VincentAndriK/Pengolahan-Citra">Aplikasi Pengolahan Citra</a></i>
-              </li>
-              <li class="mb-3">
-                <i class="fa-li fas fa-award text-warning"></i>
                 <b>Aplikasi Pemantauan Covid-19 di Indonesia</b>
                 <br>
                 <i>Bahasa Pemrograman : JavaScript</i>
                 <br>
-                <i>Pembaruan Terakhir : 17 Maret 2021</i>
+                <i>Pembaruan Terakhir : 17 Maret 2022</i>
                 <br>
                 <i>Tautan : <a href="https://vincentandrik.github.io/covid19/">Aplikasi Covid-19 Indonesia</a></i>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="sideproject">
+      <div class="w-100">
+        <h2 class="mb-5 title">Side Project</h2>
+        <div class="row">
+          <div class="col-sm-12 col-md-6">
+            <ul class="fa-ul mb-0">
+              <li class="mb-3">
+                <i class="fa-li fas fa-award text-warning"></i>
+                <b>JKT48 Song Sorter (at Rebornian48)</b>
+                <br>
+                <i>Bahasa Pemrograman : Javascript</i>
+                <br>
+                <i>Pembaruan Terakhir : 19 Desember 2021</i>
+                <br>
+                <i>Tautan : <a href="https://rebornian48.github.io/jkt48songsorter/">JKT48 Song Sorter</a></i>
+              </li>
+              <li class="mb-3">
+                <i class="fa-li fas fa-award text-warning"></i>
+                <b>JKT48 Member Sorter (at Rebornian48)</b>
+                <br>
+                <i>Bahasa Pemrograman : Javascript</i>
+                <br>
+                <i>Pembaruan Terakhir : 13 Februari 2022</i>
+                <br>
+                <i>Tautan : <a href="https://rebornian48.github.io/jkt48sorter/">JKT48 Member Sorter</a></i>
+              </li>
+              <li class="mb-3">
+                <i class="fa-li fas fa-award text-warning"></i>
+                <b>JKT48 Member Sorter Lite (at Rebornian48)</b>
+                <br>
+                <i>Bahasa Pemrograman : Javascript</i>
+                <br>
+                <i>Pembaruan Terakhir : 13 Februari 2022</i>
+                <br>
+                <i>Tautan : <a href="https://rebornian48.github.io/jkt48sorterlite/">JKT48 Member Sorter Lite</a></i>
               </li>
             </ul>
           </div>
