--- a/mini_project/clock/index.html
+++ b/mini_project/clock/index.html
@@ -3,33 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- You MUST include jQuery before Fomantic -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.6/dist/semantic.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.6/dist/semantic.min.js"></script>
     <title>Jam Analog dan Jam Digital / Analog Clock and Digital Clock</title>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <!--     Fonts and icons     -->
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
+    <!-- Nucleo Icons -->
+    <link href="../../assets/css/nucleo-icons.css" rel="stylesheet" />
+    <link href="../../assets/css/nucleo-svg.css" rel="stylesheet" />
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+    <!-- CSS Files -->
+    <link id="pagestyle" href="../../assets/css/material-dashboard.css?v=3.0.1" rel="stylesheet" />
+    <script language="JavaScript" src="https://rhashemian.github.io/js/NumberFormat.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
 </head>
 <body>
-    <br />
-    <div class="ui container">
+    <div class="container-fluid py-4">
         <h1>Jam Analog dan Jam Digital / <em>Analog Clock and Digital Clock</em></h1>
-        <div class="ui card">
-            <div class="ui content">
-                <canvas id="canvas"></canvas>
-                <h1 style="display:block" class="ui header" id="digital24"></h1>
-                <h1 style="display:none" class="ui header" id="digital12"></h1>
-                <div class="ui toggle checkbox">
-                  <input type="checkbox" name="public" id="pilihan">
-                  <label>Format 12 Jam</label>
+        <p>Dikembangkan oleh <a href="../me/">VincentAndriK</a></p>
+    </div>
+    <div class="container-fluid py-4">
+        <canvas id="canvas"></canvas>
+            <h1 style="display:block" id="digital24"></h1>
+            <h1 style="display:none" id="digital12"></h1>
+            <div>
+                <input type="checkbox" id="pilihan" onchange="pilihan()">
+                <label>Format 24 Jam</label>
+            </div>
+        <div>* Jika tidak di cek, maka jam digital dalam format 12 jam</div>
+    </div>
+    <div class="fixed-plugin">
+        <a class="fixed-plugin-button text-dark position-fixed px-3 py-2">
+            <i class="material-icons py-2">settings</i>
+        </a>
+        <div class="card shadow-lg">
+            <div class="card-header pb-0 pt-3">
+            <div class="float-start">
+                <h5 class="mt-3 mb-0">Pengaturan Tema</h5>
+            </div>
+            <div class="float-end mt-4">
+                <button class="btn btn-link text-dark p-0 fixed-plugin-close-button">
+                <i class="material-icons">clear</i>
+                </button>
+            </div>
+            <!-- End Toggle Button -->
+            </div>
+            <hr class="horizontal dark my-1">
+            <div class="card-body pt-sm-3 pt-0">
+            <div class="mt-2 d-flex">
+                <h6 class="mb-0">Terang / Gelap</h6>
+                <div class="form-check form-switch ps-0 ms-auto my-auto">
+                <input class="form-check-input mt-1 ms-auto" type="checkbox" id="dark-version" onclick="darkMode(this)">
                 </div>
-                <div>* Jika tidak di cek, maka jam digital dalam format 24 jam</div>
             </div>
         </div>
-		<footer class="footer">
-			<h4>&copy; VincentAndriK (2020 - <?php echo date("Y") ?>)</h4>
-			<h4><a href="http://www.vincentandrik.id" target="_blank">Situs Utama</a> - <a href="../" target="_blank">Situs Pengembangan</a></h4>
-		</footer>
     </div>
+    <!--   Core JS Files   -->
+
+    <script src="../../assets/js/plugins/perfect-scrollbar.min.js"></script>
+    <script src="../../assets/js/plugins/smooth-scrollbar.min.js"></script>
+    <script src="../../assets/js/plugins/chartjs.min.js"></script>
+    <!-- Github buttons -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
+    <script src="../../assets/js/material-dashboard.min.js?v=3.0.1"></script>
     <script src="../js/clock.js"></script>
 	</body>
 </html>
