--- a/index.html
+++ b/index.html
@@ -6,179 +6,8 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>VincentAndriK</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/img/logo.png" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="assets/css/styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="assets/img/logo.png" alt="..." />VincentAndriK</a>
-            </div>
-        </nav>
-        <!-- Team-->
-        <section class="page-section bg-light" id="team">
-            <div class="container">
-                <div class="text-center">
-                  <p class="text-muted">Sebagai bagian dari persembahan 10 tahun perjalanan , situs web ini menjadi salah satu persembahan kecil yang bisa diberikan.</p>
-                </div>
-                <div class="text-center">
-                    <h2 class="section-heading">Statistik  - Unofficial (Coming Soon)</h2>
-                    <h3 class="section-subheading text-muted">Merupakan situs web yang digunakan untuk mengenal lebih dalam mengenai data member, kapten, dsb yang ada di  </h3>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/one.png" alt="..." />
-                            <h4>Data Member </h4>
-                            <p class="text-muted"></p>
-                            <a class="btn btn-dark" href="#!" target="_blank">Open Link</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/one.png" alt="..." />
-                            <h4>Data Tim </h4>
-                            <p class="text-muted"></p>
-                            <a class="btn btn-dark" href="#!" target="_blank">Open Link</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/one.png" alt="..." />
-                            <h4>Data Lagu di </h4>
-                            <p class="text-muted"></p>
-                            <a class="btn btn-dark" href="#!" target="_blank">Open Link</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/covid.png" alt="Covid" />
-                            <h4>Data Covid19</h4>
-                            <p class="text-muted">Merupakan data covid19</p>
-                            <a class="btn btn-dark" href="/covid19/" target="_blank">Open Link</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/tyfm.png" alt="..." />
-                            <h4>Sorter Member  (Lite Version)</h4>
-                            <p class="text-muted">Merupakan hasil penyederhanaan dari  Member Sorter, sebagai bagian untuk mengenang member yang lulus dikarenakan terkena restrukturisasi, sekaligus sebagai bagian dari "Thank You For The Memories".</p>
-                            <a class="btn btn-dark" href="/sorterlite/" target="_blank">Open Link</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/one.png" alt="..." />
-                            <h4>Sorter Lagu </h4>
-                            <p class="text-muted">Memberikan permainan menarik yang memberikan pilihan lagu yang ada di , baik yang dari Jepang maupun Single Original  dan  Akustik. Sebuah pengembangan dari  Sorter. </p>
-                            <a class="btn btn-dark" href="/songsorter/" target="_blank">Open Link</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="page-section">
-            <div class="container">
-                <h2>Pertanyaan Umum Seputar Situs Web</h2>
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="flush-headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        Apakah situs yang disajikan merupakan situs gratis? 
-                    </button>
-                  </h2>
-                  <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Karena dengan menggunakan fasilitas hosting yang disediakan oleh github, maka sampai sekarang admin sama sekali tidak membayar biaya hosting.</div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="flush-headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                        Apakah situs yang saat ini ada tidak memiliki rencana untuk pindah ke hosting situs web yang berbayar?
-                    </button>
-                  </h2>
-                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Karena sekarang diperuntukkannya adalah situs web uji coba dan rencananya masih menggunakan fasilitas dari Github, tapi tidak memungkiri jika ke depannya bisa dimigrasikan ke situs web yang berbayar.</div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="flush-headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        Apakah kode yang ada di situs web ini bisa diambil dan dimodifikasi oleh orang lain?
-                    </button>
-                  </h2>
-                  <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Alasan admin menggunakan fasilitas github, selain hosting tidak membayar sepeserpun (sampai sekarang), kode yang diunggah di situs github dapat diambil seluruhnya dan dimodifikasi sebagian maupun seluruhnya.</div>
-                  </div>
-                </div>
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingFive">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-                        Sehubungan dengan basis data, jika ingin diubah ada di bagian yang mana ya? 
-                      </button>
-                    </h2>
-                    <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Ke depan, rencananya akan dibuat pedoman pembuatan website sorter agar dapat dikembangkan atau pun dimodifikasi oleh orang lain.
-                    </div>
-                  </div>
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingSix">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
-                        Kode dari web ini dapat diambil dimana?
-                      </button>
-                    </h2>
-                    <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Bisa langsung diambil di <a href="https://github.com/VincentAndriK/vincentandrik.github.io">Github</a>
-                    </div>
-                  </div>
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingSeven">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
-                        Jika ingin memberikan usulan dan saran terhadap situs web ini, bisa kontak ke mana?
-                      </button>
-                    </h2>
-                    <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Silakan saja kontak melalui DM (Direct Message) Twitter di <a href="https://www.twitter.com/VincentAndriK" target="_blank">@VincentAndriK</a>
-                    </div>
-                  </div>
-              </div>
-            </div>
-        </section>
-        <!-- Footer-->
-        <footer class="footer">
-            <div class="container">
-                  <p>Social Media</p>
-                  <p>
-                    <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/VincentAndriK" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="https://github.com/VincentAndriK" target="_blank"><i class="fab fa-github"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="http://t.me/VincentAndriK" target="_blank"><i class="fab fa-telegram-plane"></i></a>
-                  </p>
-                  <p>
-                    Made with &nbsp;<i class="fa fa-coffee"></i> Coffee and
-                    <a href="https://www.ecma-international.org/publications-and-standards/standards/ecma-262/" target="_blank"> Javascript</a>
-                  </p>
-                  <p>
-                    Copyright &copy; VincentAndriK - 
-                    <script>
-                        document.write(new Date().getFullYear());
-                    </script>
-                  </p>
-            </div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="assets/js/scripts.js"></script>
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    <body>
+        <h1>TESTING DOANG</h1>
     </body>
 </html>
